@@ -39,6 +39,7 @@
  * #774 (Exact limits of a normal distribution with unknown mean and variance)
  * #871 (GeneralizedExponential P parameter : int or float ?)
  * #872 (Cannot draw a Text drawable using R)
+ * #874 (Compatibility between a distribution factory and an alternate parametrization not checked)
  * #875 (TruncatedNormalFactory randomly crashes)
 
 == 1.8 release (2016-11-18) == #release-1.8
